Added Substitution functionality, base case. Still need to add validations for subbing by positions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,12 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="row">
-	    <div class="small-10 centered columns">
+	    <div class="small-12 centered columns">
+		    <% flash.each do |name, msg| %>
+			    <div data-alert class="alert-box info radius"><%= msg %>
+		    	      <a href="#" class="close">&times;</a>
+		    	    </div>
+		    <% end %>
 		    <%= yield %>
 	    </div>
     </div>
