--- a/app/views/lineups/_lineup.html.erb
+++ b/app/views/lineups/_lineup.html.erb
@@ -1,3 +1,9 @@
 <div class="lineup">
-	<%= render lineup.batting_order %>
+	<div class="batting_order">
+		<%= render lineup.batting_order %>
+	</div>
+	<hr />
+	<div class="bench">
+		<%= render lineup.players_on_bench %>
+	</div>
 </div>
