--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,5 @@
 <h2 class="team"><%= @game.team %></h2>
 <%= button_to 'Add Player', new_game_player_path(@game), method: 'get' %>
+<%= button_to 'Make Substitution', new_game_substitution_path(@game), method: 'get' %>
 
 <%= render @game.lineup %>
