Added substitution model spec, and fixed a few other failing specs as a result of changes to player validations

--- a/app/views/at_bats/new.html.erb
+++ b/app/views/at_bats/new.html.erb
@@ -1,8 +1,11 @@
-<%= @at_bat.player_id %>
 <%= form_for @at_bat, url: game_at_bats_path do |form| %>
   <div>
 	  <%= form.label :result %>
 	  <%= form.text_field :result %>
+  </div>
+  <div>
+	  <%= form.label :inning %>
+	  <%= form.text_field :inning %>
   </div>
   <%= hidden_field_tag 'player_id', @at_bat.player_id %>
   <%= form.submit 'Save' %>
